<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="action_compose">Compose</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="name_label">"user name"</string>
    <string name="handle_label">"@handle"</string>
    <string name="creation_time_text">"Creation time"</string>
    <string name="tweet_body_text">"This is a tweet body"</string>
    <string name="title_activity_compose_tweet">Compose Tweet</string>
    <string name="cancel_text">Cancel</string>
    <string name="tweet_text">Tweet</string>
    <string name="type_tweet_text">Type your tweet here&#8230;&#8230;&#8230;</string>
    <string name="handle_text">"@handle"</string>
    <string name="remaining_chars_text">"Remaining chars"</string>
    <string name="max_tweet_chars_text">140</string>
    <string name="title_activity_tweet_detail">Tweet</string>
    <string name="reply_tile_text">Reply</string>
    <string name="retweet_title">Retweets</string>
    <string name="favorite_title">Favorites</string>
    <string name="tweet_reply_prompt">Please type below a reply to the tweet</string>
    <string name="reply_hint_text">Please type your reply here&#8230;&#8230;&#8230;</string>
    <string name="profile_text">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="count_text">0</string>
    <string name="following_text">FOLLOWING</string>
    <string name="followers_text">FOLLOWERS</string>
    <string name="tagline_text">Tag line</string>

</resources>