<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_action_twitter_compose_1"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_compose">
    </item>
    
     <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/profile_text">
    </item>
    
     <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/action_refresh">
    </item>

</menu>