<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:text="@string/cancel_text" />

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_margin="5dp"
        android:background="@color/twitter_theme_color"
        android:onClick="postTweet"
        android:text="@string/tweet_text"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/ivTweeterContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnCancel"
        android:layout_margin="5dp"
        android:background="#2255ACEE" >

        <ImageView
            android:id="@+id/ivTweeter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvTweeterHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/handle_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/etTweetBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivTweeterContainer"
        android:layout_margin="5dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:maxLength="140"
        android:inputType="textMultiLine"
        android:maxLines = "4"
        android:scrollbars = "vertical" >
        <requestFocus />
    </EditText>
    
     <TextView
        android:id="@+id/tvRemainingCharsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etTweetBody"
        android:layout_below="@+id/etTweetBody"
        android:layout_marginTop="22dp"
        android:text="@string/max_tweet_chars_text" />

     <TextView
         android:id="@+id/tvRemainingCharsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tvRemainingCharsCount"
         android:layout_alignBottom="@+id/tvRemainingCharsCount"
         android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/tvRemainingCharsCount"
         android:text="@string/remaining_chars_text" />

</RelativeLayout>