<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:descendantFocusability="blocksDescendants" 
    android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />
    
    <RelativeLayout
        android:id="@+id/userNamesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/ivProfileImage" >

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="12sp"
            android:text="@string/name_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUserHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvUserName"
            android:text="@string/handle_label"
            android:textColor="#888888"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCreationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/creation_time_text"
            android:textColor="#888888"
            android:textSize="10sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNamesContainer"
        android:layout_below="@+id/userNamesContainer"
        android:textSize="12sp"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/tweet_body_text" 
        />
    
     <LinearLayout
        android:id="@+id/feedbackLayout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        
        android:layout_below="@+id/tvBody" >

         <Button
            android:id="@+id/btnReplyTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="#00000000"
            android:drawableStart="@drawable/ic_twitter_reply"
            android:onClick="replyTweet"
            android:title="@string/reply_tile_text" />

        <Button
            android:id="@+id/btnRetweet"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:drawableLeft="@drawable/ic_twitter_retweet"
            android:background="#00000000"
            android:textSize="10sp"
            android:textStyle="bold"
            android:onClick="retweet"
            android:title="@string/retweet_title" />
        
         <TextView
            android:id="@+id/tvRetweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textStyle="bold"
            android:title="@string/retweet_title" />

        <Button
            android:id="@+id/btnFavorite"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:background="#00000000"
            android:drawableLeft="@drawable/ic_twitter_favorite"
            android:textSize="10sp"
            android:textStyle="bold"
            android:title="@string/favorite_title" >
        </Button>
            
        <TextView
            android:id="@+id/tvFavoriteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textStyle="bold"
            android:title="@string/favorite_title" >
        </TextView>
    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/flTweetReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/feedbackLayout" >
    </FrameLayout>

</RelativeLayout>
