<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="com.codepath.apps.basictwitter.activities.TweetDetailActivity" >

    <ImageView
        android:id="@+id/ivTweeterImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvTweeterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivTweeterImage"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/ivTweeterImage"
        android:text="@string/name_label"
        android:textSize="12sp" >
    </TextView>

    <TextView
        android:id="@+id/tvTweeterHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTweeterName"
        android:layout_below="@+id/tvTweeterName"
        android:text="@string/handle_label"
        android:textColor="#888888"
        android:textSize="10sp" >
    </TextView>

    <TextView
        android:id="@+id/tvTweetBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvTweeterHandle"
        android:layout_marginTop="10dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="Tweet Body" />

    <ImageView
        android:id="@+id/ivMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTweetBody"
        android:layout_alignRight="@+id/tvTweetBody"
        android:layout_below="@+id/tvTweetBody"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:maxHeight="120dp"
        android:maxWidth="240dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivMedia"
        android:layout_marginTop="10dp"
        android:text="@string/creation_time_text"
        android:textColor="#888888"
        android:textSize="10sp" />

     <LinearLayout
        android:id="@+id/feedbackLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvTimeStamp" >

        <Button
            android:id="@+id/btnReplyTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_action_reply"
            android:onClick="replyTweet"
            android:title="@string/reply_tile_text" />

        <TextView
            android:id="@+id/tvRetweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_twitter_retweets"
            android:drawablePadding="5dp"
            android:title="@string/retweet_title"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFavoriteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_twitter_favorite"
            android:drawablePadding="5dp"
             android:title="@string/favorite_title"
            android:textSize="10sp"
            android:textStyle="bold" >
        </TextView>
        
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/rlTweetReplyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedbackLayout"
        android:visibility="invisible" >

       <EditText
           android:id="@+id/etTweetReply"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentRight="true"
           android:ems="10"
           android:hint="@string/reply_hint_text"
           android:inputType="textMultiLine"
           android:maxLength="140"
           android:maxLines="3"
           android:scrollbarAlwaysDrawVerticalTrack="false"
           android:scrollbars="vertical" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnPostReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etTweetReply"
            android:layout_alignParentLeft="true"
            android:background="#00000000"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_action_send_now"
            android:onClick="postReply" />

        <Button
            android:id="@+id/btnCancelReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etTweetReply"
            android:layout_toRightOf="@+id/btnPostReply"
            android:background="#00000000"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_action_cancel"
            android:onClick="cancelReply" />

        <TextView
            android:id="@+id/tvRemainingCharsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etTweetReply"
            android:layout_alignRight="@+id/etTweetReply"
            android:text="@string/max_tweet_chars_text" />

        <TextView
            android:id="@+id/tvRemainingCharsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvRemainingCharsCount"
            android:layout_alignBottom="@+id/tvRemainingCharsCount"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tvRemainingCharsCount"
            android:text="@string/remaining_chars_text" />
        
    </RelativeLayout>

</RelativeLayout>