<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.basictwitter.activities.ProfileActivity" >

    <RelativeLayout
        android:id="@+id/rlUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/flUserTimeLine"
        android:background="@drawable/border" >

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivUserImage"
            android:layout_marginLeft="5dp"
            android:text="@string/name_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvUserName"
            android:layout_below="@+id/tvUserName"
            android:text="@string/tagline_text"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="12sp" 
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ivUserImage"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/ivUserImage" >

            <TextView
                android:id="@+id/tvNumFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvNumFollowersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/followers_text"
                android:textColor="#888888"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvNumFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/count_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvNumFollowingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/following_text"
                android:textColor="#888888"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
    
    <FrameLayout
        android:id="@+id/flUserTimeLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rlUserInfo"
        tools:layout="@layout/fragment_tweets_list" >
    </FrameLayout>
  
<!--     <fragment
        android:id="@+id/fragmentUserTimeLine"
        android:name="com.codepath.apps.basictwitter.fragments.UserTimeLineFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rlUserInfo"
        tools:layout="@layout/fragment_tweets_list" /> -->

</RelativeLayout>
